add BoxReserva component, form components

--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -1,2 +1,6 @@
 @import '../../components/Navbar/Navbar.scss';
 @import '../../components/HomeBanner/HomeBanner.scss';
+@import '../../components/Form/Input/Input.scss';
+@import '../../components/Button/Button.scss';
+@import '../../components/BoxReserva/BoxReserva.scss';
+@import '../../components/Form/Select/Select.scss';
