--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -1,17 +1,17 @@
 .container {
   padding: 0 $nudge-2;
   margin: 0 auto;
+  width: 100%;
 }
 
 @include for-tablet-portrait-up {
   .container {
-    width: 36rem;
+    max-width: 36rem;
   }
 }
 
 @include for-desktop-up {
   .container {
-    width: 71.875rem;
-    padding: 0;
+    max-width: 80rem;
   }
 }
