add about section

--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -4,3 +4,4 @@
 @import '../../components/Button/Button.scss';
 @import '../../components/BoxReserva/BoxReserva.scss';
 @import '../../components/Form/Select/Select.scss';
+@import '../../components/About/About.scss';
