add Quartos section

--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -5,3 +5,4 @@
 @import '../../components/BoxReserva/BoxReserva.scss';
 @import '../../components/Form/Select/Select.scss';
 @import '../../components/About/About.scss';
+@import '../../components/QuartosSection/QuartosSection.scss';
