--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,7 +1,7 @@
 .Button {
   width: 254px;
   height: 60px;
-  border: 3px solid;
+  border: 3px solid transparent;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: $nudge;
