add hero message

--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -6,3 +6,4 @@
 @import '../../components/Form/Select/Select.scss';
 @import '../../components/About/About.scss';
 @import '../../components/QuartosSection/QuartosSection.scss';
+@import '../../components/Hero/Hero.scss';
