add Where we are section

--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -7,3 +7,4 @@
 @import '../../components/About/About.scss';
 @import '../../components/QuartosSection/QuartosSection.scss';
 @import '../../components/Hero/Hero.scss';
+@import '../../components/WhereWeAre/WhereWeAre.scss';
