add footer component

--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -8,3 +8,4 @@
 @import '../../components/QuartosSection/QuartosSection.scss';
 @import '../../components/Hero/Hero.scss';
 @import '../../components/WhereWeAre/WhereWeAre.scss';
+@import '../../components/Footer/Footer.scss';
