add quartos page

--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -9,3 +9,4 @@
 @import '../../components/Hero/Hero.scss';
 @import '../../components/WhereWeAre/WhereWeAre.scss';
 @import '../../components/Footer/Footer.scss';
+@import '../../components/ImageBox/ImageBox.scss';
