--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -2,5 +2,6 @@
 @import 'base/all';
 @import 'layout/all';
 @import 'components/all';
+@import 'pages/all';
 @import 'elements/all';
 @import 'util/all';
