add quarto page

--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -10,3 +10,5 @@
 @import '../../components/WhereWeAre/WhereWeAre.scss';
 @import '../../components/Footer/Footer.scss';
 @import '../../components/ImageBox/ImageBox.scss';
+@import '../../components/Section/Section.scss';
+@import '../../components/Box/Box.scss';
