--- a/src/components/Form/Input/Input.scss
+++ b/src/components/Form/Input/Input.scss
@@ -26,6 +26,8 @@
     font-weight: normal;
     font-size: 24px;
     line-height: 33px;
+    margin: $half-nudge;
+    color: #667788;
   }
 
   input {
