--- a/src/sass/pages/_all.scss
+++ b/src/sass/pages/_all.scss
@@ -1,2 +1,3 @@
 @import "../../pages/Quartos/Quartos.scss";
 @import "../../pages/Quarto/Quarto.scss";
+@import "../../pages/FinalizarReserva/FinalizarReserva.scss";
