Add reserva finalizada page

--- a/src/sass/pages/_all.scss
+++ b/src/sass/pages/_all.scss
@@ -1,3 +1,4 @@
 @import "../../pages/Quartos/Quartos.scss";
 @import "../../pages/Quarto/Quarto.scss";
 @import "../../pages/FinalizarReserva/FinalizarReserva.scss";
+@import "../../pages/ReservaFinalizada/ReservaFinalizada.scss";
