--- a/src/sass/pages/_all.scss
+++ b/src/sass/pages/_all.scss
@@ -2,3 +2,4 @@
 @import "../../pages/Quarto/Quarto.scss";
 @import "../../pages/FinalizarReserva/FinalizarReserva.scss";
 @import "../../pages/ReservaFinalizada/ReservaFinalizada.scss";
+@import "../../pages/ReservasFeitas/ReservasFeitas.scss";
