add contato page

--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -4,6 +4,7 @@
 @import '../../components/Button/Button.scss';
 @import '../../components/BoxReserva/BoxReserva.scss';
 @import '../../components/Form/Select/Select.scss';
+@import '../../components/Form/TextArea/TextArea.scss';
 @import '../../components/About/About.scss';
 @import '../../components/QuartosSection/QuartosSection.scss';
 @import '../../components/Hero/Hero.scss';
