--- a/src/sass/pages/_all.scss
+++ b/src/sass/pages/_all.scss
@@ -3,3 +3,4 @@
 @import "../../pages/FinalizarReserva/FinalizarReserva.scss";
 @import "../../pages/ReservaFinalizada/ReservaFinalizada.scss";
 @import "../../pages/ReservasFeitas/ReservasFeitas.scss";
+@import "../../pages/Contato/Contato.scss";
