--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -13,6 +13,9 @@
     }
 
     .Navbar__logo {
+      a {
+        text-decoration: none;
+      }
       h1 {
         color: #eff4f9;
         font-weight: bold;
@@ -84,6 +87,7 @@
             color: #eff4f9;
             text-decoration: none;
 
+            &.active,
             &:hover {
               text-decoration: underline;
             }
