--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -12,6 +12,18 @@
   justify-content: center;
   font-size: 24px;
   line-height: 33px;
+  cursor: pointer;
+  transition: transform 0.5s;
+  outline: none;
+  text-decoration: none;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+
+  &:active {
+    transform: scale(0.99);
+  }
 
   &--fullwidth {
     width: 100%;
