--- a/src/components/ImageBox/ImageBox.scss
+++ b/src/components/ImageBox/ImageBox.scss
@@ -6,6 +6,7 @@
   max-width: 600px;
   transition: box-shadow 0.5s;
   border: 0.5px solid rgba(0, 0, 0, 0.1);
+  text-decoration: none;
 
   &:hover {
     box-shadow: -4px 4px 20px rgba(0, 0, 0, 0.25);
