Integração admin e contato

--- a/src/pages/Contato/Contato.scss
+++ b/src/pages/Contato/Contato.scss
@@ -12,6 +12,9 @@
 
     form {
       margin-bottom: $nudge-7;
+      .Feedback {
+        font-size: 20px;
+      }
     }
     .Contato__map {
       p {
